sanger/sites/sc_sn_integration_donor_11/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-sn-integration-donor-11
spec:
  selector:
    matchLabels:
      app: sc-sn-integration-donor-11
  replicas: 1
  template:
    metadata: 
      name: sc-sn-integration-donor-11
      labels:
        app: sc-sn-integration-donor-11
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sc-sn-integration-donor-11-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.11.0
        imagePullPolicy: IfNotPresent
        name: sc-sn-integration-donor-11
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/donor_11_sc_sn_trajectories_final_cellxgene.h5ad", "-t", " sc_sn_integration_donor_11", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "1.5Gi"
            cpu: 1
