sanger/sites/sc_sn_integration_donor_11/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-sn-integration-donor-11
  labels:
    app: sc-sn-integration-donor-11
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: sc-sn-integration-donor-11
