sanger/sites/sc_sn_integration_donor_11/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: sc-sn-integration-donor-11
spec:
  virtualhost:
    fqdn: sc-sn-integration-donor-11.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: sc-sn-integration-donor-11
          port: 80
---
